@@ -1,0 +1,34 @@
+0xD6C7	0xFB1F
+0xE0C7	0xFB2E
+0xE0C8	0xFB2F
+0xE0CC	0xFB30
+0xE1CC	0xFB31
+0xE1CF	0xFB4C
+0xE2CC	0xFB32
+0xE3CC	0xFB33
+0xE4CC	0xFB34
+0xE5C9	0xFB4B
+0xE5CC	0xFB35
+0xE6CC	0xFB36
+0xE8CC	0xFB38
+0xE9C4	0xFB1D
+0xE9CC	0xFB39
+0xEACC	0xFB3A
+0xEBCC	0xFB3B
+0xEBCF	0xFB4D
+0xECCC	0xFB3C
+0xEECC	0xFB3E
+0xF0CC	0xFB40
+0xF1CC	0xFB41
+0xF3CC	0xFB43
+0xF4CC	0xFB44
+0xF4CF	0xFB4E
+0xF6CC	0xFB46
+0xF7CC	0xFB47
+0xF8CC	0xFB48
+0xF9CC	0xFB49
+0xF9CCD1	0xFB2C
+0xF9CCD2	0xFB2D
+0xF9D1	0xFB2A
+0xF9D2	0xFB2B
+0xFACC	0xFB4A
