@@ -1,6 +1,7 @@
 New in 1.7:
 
 * Added UTF-32, UTF-32BE, UTF-32LE converters.
+* Changed the CP1255 encoder to decompose precomposed characters.
 * Changed the CP1258 encoder to partially decompose precomposed characters.
 * Changed the GB18030 converter to not reject unassigned and private-use
   Unicode characters.
