@@ -1,3 +1,10 @@
+2001-05-20  Bruno Haible  <haible@clisp.cons.org>
+
+        * lib/cp1255.h (cp1255_decomp_table): New array.
+          (cp1255_comb_table): New array.
+          (cp1255_wctomb): Decompose Unicode characters.
+        * tests/CP1255.IRREVERSIBLE.TXT: New file.
+
 2001-05-13  Bruno Haible  <haible@clisp.cons.org>
 
         * lib/vietcomb.h: New file.
